--- a/css/style.css
+++ b/css/style.css
@@ -49,6 +49,7 @@ body {
   top: 40%;
   left: 50%;
   transform: translate(-50%, -50%);
+  text-align: center;
 }
 
 .heading-primary {
@@ -58,7 +59,7 @@ body {
   /*лечение для подергивания в конце от анимации
   никто не знает почему и как. Применили к родителю.
   У меня не было подергивания  */
-
+  margin-bottom: 60px;
 }
 
 .heading-primary-main {
@@ -117,4 +118,31 @@ body {
     opacity: 1;
     transform: translateX(0);
   }
+}
+
+.btn:link,
+.btn:visited {
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 15px 40px;
+  display: inline-block;
+  /*все-равно какая цифра*/
+  border-radius: 100px;
+  /*initial state*/
+  transition: all .2s ;
+}
+
+.btn:hover {
+  transform: translateY(-3px);
+  box-shadow: 0 10px 20px rgba(0,0,0,.2);
+}
+/*clicked*/
+.btn:active {
+  transform: translateY(-1px);
+  box-shadow: 0 5px 10px rgba(0,0,0,.2);
+}
+
+.btn-white {
+  background-color: #fff;
+  color: #777;
 }
