--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,19 @@ body {
     transform: translateX(0);
   }
 }
+@keyframes moveInBottom {
+  0% {
+    opacity: 0;
+    transform: translateY(30px);
+    /*слева на право*/
 
+  }
+
+  100% {
+    opacity: 1;
+    transform: translate(0);
+  }
+}
 .btn:link,
 .btn:visited {
   text-transform: uppercase;
@@ -130,6 +142,8 @@ body {
   border-radius: 100px;
   /*initial state*/
   transition: all .2s ;
+  position: relative;
+  /*для кнопки after*/
 }
 
 .btn:hover {
@@ -145,4 +159,31 @@ body {
 .btn-white {
   background-color: #fff;
   color: #777;
+}
+
+.btn:after {
+  content: "";
+  display: inline-block;
+  height: 100%;
+  width: 100%;
+  border-radius: 100px;
+  position: absolute;
+  top: 0;
+  left: 0;
+  z-index: -1;
+  transition: all .4s;
+}
+.btn-white::after {
+  background-color: #fff;
+
+}
+.btn:hover::after {
+  transform: scaleX(1.4) scaleY(1.6);
+  opacity: 0;
+
+}
+.btn-animated{
+animation: moveInBottom .5s ease-out .75s;
+animation-fill-mode: backwards;
+/*автоматом применяет 0%стиль перед началом анимации*/
 }
