--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -1,3 +1,4 @@
+//Colors
 $color-primary: #55c57a;
 $color-primary-light: #7ed56f;
 $color-primary-dark: #28b485;
@@ -5,3 +6,8 @@ $color-primary-dark: #28b485;
 $color-gray-dark: #777;
 $color-white: #fff;
 $color-black: #000;
+
+//Grid
+$grid-width: 114rem; //max-width: 114rem; 1140px/10 (10px=1rem)
+$gutter-vertical:8rem;
+$gutter-horizontal:6rem;
