--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -9,6 +9,9 @@ $color-gray-dark: #777;
 $color-white: #fff;
 $color-black: #000;
 
+//Font
+$default-font-size: 1.6rem;
+
 //Grid
 $grid-width: 114rem; //max-width: 114rem; 1140px/10 (10px=1rem)
 $gutter-vertical:8rem;
