--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -50,7 +50,7 @@ body {
   font-weight: 700;
   display: inline-block;
   background-image: linear-gradient(to right, $color-primary-light, $color-primary-dark);
-  background-clip: text;
+  // background-clip: text;
   //gradient behind text
   -webkit-background-clip: text;
   color: transparent;
