--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -30,12 +30,21 @@
   }
 
   &--white {
-    background-color: $color-white;
-    color: $color-gray-dark;
-    &::after {
-    background-color: $color-white;
+        background-color: $color-white;
+        color: $color-gray-dark;
+        &::after {
+        background-color: $color-white;
+      }
   }
+
+  &--green {
+      background-color: $color-primary;
+      color: $color-white;
+      &::after {
+      background-color: $color-primary;
+    }
   }
+
 
   &:after {
     content: "";
