--- a/sass/components/_form.scss
+++ b/sass/components/_form.scss
@@ -53,8 +53,12 @@
   }
 
   &__radio-group {
-    width: 49%;
+    width: 39%;
     display: inline-block;
+  }
+
+  &__radio-input {
+    display: none;
   }
 
   &__radio-label {
@@ -64,20 +68,20 @@
     padding-left: 4.5rem;
   }
   &__radio-button {
-    height: 3rem;
-    width: 3rem;
+    height: 2rem;
+    width: 2rem;
     border: 5px solid $color-primary;
     border-radius: 50%;
     display: inline-block;
     position: absolute;
     left: 0;
-    top: 0;
+    top: -.4rem;
 
     &::after{
       content: "";
       display: block;
-      height: 1rem;
-      width: 1rem;
+      height: 1.3rem;
+      width: 1.3rem;
       border-radius: 50%;
       position: absolute;
       //we have reletav absolute (&__radio-button)
@@ -86,6 +90,12 @@
       left: 50%;
       transform: translate(-50%, -50%);
       background-color: $color-primary;
+      opacity: 0;
+      transition: opacity .2s;
     }
+  }
+
+  &__radio-input:checked ~ &__radio-label &__radio-button::after {
+    opacity: 1;
   }
 }
